2007-04-04 Kimmo
 Bump manual revision to 1.3.5.
  Manual: WinMerge_help.xml

2007-03-30 Kimmo
 PATCH: [ 1690859 ] Manual: Update filters doc to say we now support PCRE regexp
  Manual: Filters.xml

2007-02-01 Kimmo
 Bump manual revision to 1.3.4.
  Manual: WinMerge_help.xml

2007-01-16 Tim
 PATCH: [ 1636315 ] Manual: Nicer navigation layout for HTML version
  Manual/build: build_html.xsl
  Manual/css: all.css
 PATCH: [ 1637088 ] Manual: Add VB requirements to available plugins
  Manual: Plugins.xml
 With a "min-width" scales the HTML version much better on modern browser with large font sizes.
  Manual/css: all.css

2007-01-14 Tim
 Fix CVS "Id:" line filter.
  Manual: Filters.xml

2007-01-14 Kimmo
 PATCH: [ 1633560 ] Manual: WinMerge minimizes time needed for ignored files
  Manual: Filters.xml

2007-01-14 Tim
 PATCH: [ 1633632 ] Plugin to ignore leading line numbers in text files
  Manual: Plugins.xml

2007-01-10 Kimmo
 Bump manual revision to 1.3.3, expand copyright to 2007.
  Manual: WinMerge_help.xml

2007-01-04 Tim
 PATCH: [ 1626464 ] Manual: Highlight examples with CSS
  Manual/css: all.css help.css print.css
 PATCH: [ 1627363 ] Manual: Merge with Plugins.txt and list_of_sources.txt
  Manual: Plugins.xml

2007-01-02 Tim
 PATCH: [ 1624905 ] Manual: Remove <productname>
  Manual: Faq.xml Open_paths.xml
 PATCH: [ 1624906 ] Manual: Add registered trademark for Microsoft
  Manual: Faq.xml Plugins.xml

2006-12-30 Tim
 PATCH: [ 1623604 ] Manual: Remove <screen> from Command_line.xml
  Manual: Command_line.xml
  Manual/css: all.css help.css print.css

2006-12-20 Kimmo
 PATCH: [ 1618452 ] Manual: Add new FAQ item about all lines marked different
  Manual: Faq.xml
 PATCH: [ 1618935 ] Manual: Add screenshots and description for editor margin
  Manual: Compare_files.xml
  Manual/screenshots new files: filecomp_margin1.png filecomp_margin2.png
 Bump manual revision to 1.3.2
  Manual: WinMerge_help.xml

2006-12-11 Tim