@@ -1,3 +1,7 @@
+2007-04-12 Kimmo
+ PATCH: [ 1698798 ] Manual: Clarify quick compare limit FAQ
+  Manual: Faq.xml
+
 2007-04-04 Kimmo
  Bump manual revision to 1.3.5.
   Manual: WinMerge_help.xml
